# cord

./: .dictionary.txt  .eslintignore  .eslintrc  .gitattributes  .gitignore  .lintstagedrc  .prettierignore  .sequelize-config.cjs  .sequelizerc  CONTRIBUTING.md  DeleteResourcesByHand  README.md  build_image.sh  deploy_image.sh  nodemon-docs-server.json  nodemon-server-snapshots.json  nodemon-server.json  package-lock.json  package.json  preview.Dockerfile  start_node.sh  tsconfig.json
codemods/: jss-to-vanilla-extract.ts
cypress/: .gitignore  cypress.config.cjs  e2e-test-runner.ts  modules.d.ts  package-lock.json  package.json  tsconfig.json  utils.ts
database/: schema.sql
demo-apps/: build-demo-apps.sh  util.ts
docs/: .eslintrc  README.md
github-workflows/: build-and-deploy-on-push.yml  build-migration-against-prod.yml  build-on-pullrequest.yml  copy-prod-data-to-replica.yml  cypress-on-pullrequest.yml  daily-prod-push.yml  deploy-hotfix-to-prod-emergency-accelerated.yml  deploy-hotfix-to-prod.yml  deploy-hotfix-to-staging.yml  deploy-pull-request.yml  generate-docs-embeddings.yml  promote-staging-docs-to-prod.yml  rebuild-e2e-test-runner-container.yml  rebuild-github-actions-runner-container.yml  rebuild-pr-server-container.yml
jest/: resolver.cjs  setup-jest-env.js  transformer.mjs
opensource/sdk-python/: .gitignore  LICENSE  README.md  pyproject.toml
opensource/sdk-python/src/sample_code/: syncing.py
opensource/sdk-python/src/server/: server.py
opensource/sdk-python/src/tests/: server_tests.py
opensource/sdk-python/src/types/: types.py
(+1711 files in other folders)
